--- a/index.html
+++ b/index.html
@@ -63,15 +63,34 @@
                     </p>
                     <h3 class="title-author alegreya-bold">Chef Cook</h3>
                     <div class="photo-author">
-
+                        <div class="name-cook alegreya">Benito</div>
+                        <div class="img-cook">
+                            <img src="images/img-cook.png" alt="Benito" width="109" height="109">
+                        </div>
+                        <div class="name-cook alegreya">Gaspare</div>
                     </div>
-                    <blockquote class="quote-author">Unique creations for unique occasions.</blockquote>
+                    <div class="for-bg-quote-author">
+                        <div class="kav-1"></div>
+                        <blockquote class="quote-author scriptina">Unique creations for unique occasions.</blockquote>
+                        <div class="kav-2"></div>
+                    </div>
                 </div>
                 <div class="cakes-images">
-                    <div class="cakes-images-item-1"></div>
-                    <div class="cakes-images-item-2"></div>
-                    <div class="cakes-images-item-3"></div>
-                    <div class="cakes-images-item-4"></div>
+                    <div class="cakes-images-item-1">
+                        <div class="title-tastes alegreya">
+                            <span>Tastes so good!</span>
+                        </div>
+                        <img src="images/produkt-top-left.jpg" alt="tastes" width="295" height="250">
+                    </div>
+                    <div class="cakes-images-item-2">
+                        <img src="images/produkt-top-right.jpg" alt="tastes" width="295" height="250">
+                    </div>
+                    <div class="cakes-images-item-3">
+                        <img src="images/produkt-bottom-left.jpg" alt="tastes" width="295" height="250">
+                    </div>
+                    <div class="cakes-images-item-4">
+                        <img src="images/produkt-bottom-right.jpg" alt="tastes" width="295" height="250">
+                    </div>
                 </div>
             </div>
         </div>
