--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Bakery</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <!--<link rel="stylesheet" href="css/index.css">-->
     <link rel="stylesheet/less" href="css/index.less">
     <script src="js/less.min.js"></script>
@@ -95,8 +97,59 @@
             </div>
         </div>
     </div>
+    <div class="bg-for-section-3">
+        <div class="wrapper">
+            <div class="section-3">
+                <div class="owl-carousel owl-theme">
+                    <div class="item" data-hash="zero">
+                        <img src="images/big-img-slider-1.png" alt="cakes" width="420" height="512">
+                    </div>
+                    <div class="item" data-hash="one">
+                        <img src="images/big-img-slider-1.png" alt="cakes" width="420" height="512">
+                    </div>
+                    <div class="item" data-hash="two">
+                        <img src="images/big-img-slider-1.png" alt="cakes" width="420" height="512">
+                    </div>
+                </div>
+                <div id="reviewStars-input">
+                    <input id="star-4" type="radio" name="reviewStars"/>
+                    <label title="gorgeous" for="star-4"></label>
+
+                    <input id="star-3" type="radio" name="reviewStars"/>
+                    <label title="good" for="star-3"></label>
+
+                    <input id="star-2" type="radio" name="reviewStars"/>
+                    <label title="regular" for="star-2"></label>
+
+                    <input id="star-1" type="radio" name="reviewStars"/>
+                    <label title="poor" for="star-1"></label>
+
+                    <input id="star-0" type="radio" name="reviewStars"/>
+                    <label title="bad" for="star-0"></label>
+                </div>
+                <div class="content-section-3">
+                    <div class="timer-to-ready alegreya-bold">
+                        <span class="timer-name">ready in</span>
+                        <span class="timer-time">40</span>
+                        <span class="timer-unit">mins</span>
+                    </div>
+                    <div class="wrapper-dish-name alegreya-bold">
+                        <h2 class="dish-name">Tasty pancakes</h2>
+                        <h3 class="dish-title">season favourite</h3>
+                    </div>
+                    <div class="dish-desc proximanova-regular">
+                        <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus.</p>
+                    </div>
+                    <div class="dish-rating">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
